src/process/build/log/idf_py_stderr_output_385974
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c: In function 'app_main':
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:228:34: warning: comparison between pointer and integer
  228 |         for (uint32_t i = 0x0; i < ptrVal; i++) {
      |                                  ^
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:234:32: error: 'tReply' undeclared (first use in this function)
  234 |             else if (i%3 == 1) tReply+="G";
      |                                ^~~~~~
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:234:32: note: each undeclared identifier is reported only once for each function it appears in
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:236:22: error: implicit declaration of function 'String' [-Werror=implicit-function-declaration]
  236 |             tReply+= String(rgb[i]) + ",";
      |                      ^~~~~~
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:186:13: warning: unused variable 'vomax' [-Wunused-variable]
  186 |     uint8_t vomax[3] = {0x28,0x8c,0xf}; // Valores maximos de verde oscuro en hexadecimal en orden RGB
      |             ^~~~~
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:182:13: warning: unused variable 'vcmin' [-Wunused-variable]
  182 |     uint8_t vcmin[3] = {0x28,0xa0,0x0}; // Valores minimos de verde claro en hexadecimal en orden RGB
      |             ^~~~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:63: esp-idf/main/CMakeFiles/__idf_main.dir/process.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:4739: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
